--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,27 @@
-/* You can add global styles to this file, and also import other style files */
+/*Applying suitable background gradient to page*/
+body{
+	background: linear-gradient(to bottom right,rgb(150, 180, 130),rgb(174, 184, 167));
+	height: 100%;
+	margin: 0;
+	background-attachment: fixed;
+	background-repeat: no-repeat;
+}
+
+/* Applying padding to cells in table view for a neater look */
+th, td {
+	padding: 5px;
+}
+
+/* Here we use angular validation CSS classes */
+
+/* Field borders turn red when touched and invalid */
+input.ng-touched.ng-invalid, select.ng-touched.ng-invalid {
+    border-color:red;
+    border-width: 2px;
+}
+
+/* Field borders turn green when touched and invalid */
+input.ng-touched.ng-valid, select.ng-touched.ng-valid {
+    border-color:green;
+    border-width: 2px;
+}
